--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style_main.css">
         <link rel="icon" type="image/x-icon" href="images\EA-transparent.png">
 
     <style>
@@ -11,7 +11,6 @@
             height: 300px;
             background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(0, 0, 0)); */
 
-        }; 
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;561;600;700&display=swap');
         
     </style>
@@ -28,6 +27,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="aboutme.html">ABOUT ME</a></li>
                 <li><a href="education.html">EDUCATION</a></li>
+                <li><a href="experience.html">EXPERIENCE</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
             </ul>
