--- a/skills.html
+++ b/skills.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="skills_style.css">
+        <link rel="stylesheet" href="style_main.css">
+        <link rel="stylesheet" href="style_skills.css">
         <link rel="icon" type="image/x-icon" href="images\EA-transparent.png">
 
     <style>
@@ -12,7 +12,6 @@
             height: 300px;
             background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(0, 0, 0)); */
 
-        }; 
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;561;600;700&display=swap');
         
     </style>
@@ -29,6 +28,7 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="aboutme.html">ABOUT ME</a></li>
                 <li><a href="education.html">EDUCATION</a></li>
+                <li><a href="experience.html">EXPERIENCE</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
             </ul>
