--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <html>
     <head>
         <title>Portfolio website - Eda Akaltun</title>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style_main.css">
         <link rel="stylesheet" href="loading.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
-    <style>
-        body {
-          height: 1100px; /* Make this site really long */
-          /* overflow-y: hidden; */
-          overflow-x: hidden;
-          overflow-y: scroll;
-        }
-    </style>
 <body>
 
-    <div class="background">
+<div class="background">
 
     <div class="nav-container">
         <nav class="navbar"> 
@@ -45,8 +37,8 @@
     </div>
         <script src="navbar.js"></script>
 
-
-    <div class="imagecenter"> <img src="images\frontpage.png" width= 2000px"> </img> <div class="centered">PLACEHOLDER</div></div>
+<br></br>
+    <div class="imagecenter"> <img src="images\frontpage.png" width= 1800px"> </img> <div class="centered"></div></div>
 
             <div class="social-links footerweb">
                 <div class="inf_line">
