--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,8 @@
     </div>
         <script src="navbar.js"></script>
 
-        <div class="abouttextbox">
+        
+        <div class="abouttextbox overflowcontainer">
             <img src="images\aboutme\cvpiccrop.png">
                 <h2 class="title">About Me</h2>
                 <p class="description">
