--- a/index.html
+++ b/index.html
@@ -37,8 +37,26 @@
     </div>
         <script src="navbar.js"></script>
 
-<br></br>
-    <div class="imagecenter"> <img src="images\frontpage.png" width= 1800px"> </img> <div class="centered"></div></div>
+   
+<div class="overflowcontainer_home"> <img src="images\indexmap\126371014.png"> </img>
+    <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me.png">
+    <img class="overflowcontainer_home_Education shadowfilter" src="images\indexmap\education.png">
+    <img class="overflowcontainer_home_Experience shadowfilter" src="images\indexmap\experience.png">
+    <img class="overflowcontainer_home_Projects shadowfilter" src="images\indexmap\projects.png">
+    <img class="overflowcontainer_home_Skills shadowfilter" src="images\indexmap\skills.png">
+</div>
+
+
+<!-- <div class="overflowcontainer_home"> <img src="images\indexmap\126371014 copy.png"> </img>
+    <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me copy.png" id="img_about">
+    <img class="overflowcontainer_home_Education shadowfilter" src="images\indexmap\education copy.png" id="img_education">
+    <img class="overflowcontainer_home_Experience shadowfilter" src="images\indexmap\experience copy.png" id="img_experience">
+    <img class="overflowcontainer_home_Projects shadowfilter" src="images\indexmap\projects copy.png" id="img_projects">
+    <img class="overflowcontainer_home_Skills shadowfilter" src="images\indexmap\skills copy.png" id="img_skills">
+</div> -->
+
+
+
 
             <div class="social-links footerweb">
                 <div class="inf_line">
@@ -64,6 +82,8 @@
     </div>
 
 <script src="darkmode.js"></script>
+
+<script src="darkmodemap.js"></script>
 
 </body>
 </html>
