--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     </div>
         <script src="navbar.js"></script>
 
-   
-<div class="overflowcontainer_home"> <img src="images\indexmap\126371014.png"> </img>
-    <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me.png">
-    <img class="overflowcontainer_home_Education shadowfilter" src="images\indexmap\education.png">
-    <img class="overflowcontainer_home_Experience shadowfilter" src="images\indexmap\experience.png">
-    <img class="overflowcontainer_home_Projects shadowfilter" src="images\indexmap\projects.png">
-    <img class="overflowcontainer_home_Skills shadowfilter" src="images\indexmap\skills.png">
+<div class="overflowcentered">
+<div class="overflowcontainer_home"> <img src="images\indexmap\126371014.png"> 
+    <a href="aboutme.html"> <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me.png"> </a>
+    <a href="education.html"> <img class="overflowcontainer_home_Education shadowfilter" src="images\indexmap\education.png"></a>
+    <a href="experience.html"> <img class="overflowcontainer_home_Experience shadowfilter" src="images\indexmap\experience.png"></a>
+    <a href="projects.html"> <img class="overflowcontainer_home_Projects shadowfilter" src="images\indexmap\projects.png"></a>
+    <a href="skills.html"> <img class="overflowcontainer_home_Skills shadowfilter" src="images\indexmap\skills.png"></a>
 </div>
-
+</div>
 
 <!-- <div class="overflowcontainer_home"> <img src="images\indexmap\126371014 copy.png"> </img>
     <img class="overflowcontainer_home_AboutMe shadowfilter" src="images\indexmap\about me copy.png" id="img_about">
