--- a/projects.html
+++ b/projects.html
@@ -55,14 +55,14 @@
       <input type="radio" name="filter" id="Architecture"><label for="Architecture">Architecture & Construction</label>
       <input type="radio" name="filter" id="Code"><label for="Code">Code</label>
       <input type="radio" name="filter" id="Product"><label for="Product">Product</label>
-      <input type="radio" name="filter" id="Graphic"><label for="Graphic">Design</label>
+      <!-- <input type="radio" name="filter" id="Graphic"><label for="Graphic">Design</label> -->
       <div class="gallery">
         <figure class="card Code">
           <a href="https://edaakaltun.github.io/project_apidae/"> <img class="card__image" loading="lazy" src="images\projecten\apidae\3.4_lattice_gym.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Project Apidae</figcaption>
         </figure>
         <figure class="card Code">
-          <img class="card__image" loading="lazy" src="images\frontpage.png" height="250px" alt="">
+          <img class="card__image" loading="lazy" src="images\indexmap\126371014.png" height="250px" alt="">
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
         <figure class="card Architecture">
@@ -78,37 +78,33 @@
           <figcaption class="card__caption">SUM</figcaption>
         </figure>
         <figure class="card Architecture">
-          <img class="card__image" loading="lazy" src="images\projecten\Zero\situation2.png" height="250px" alt="">
-          <figcaption class="card__caption">ZERO Energy</figcaption>
-        </figure>
-        <figure class="card Architecture">
           <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png" height="250px" alt="">
           <figcaption class="card__caption">ON6</figcaption>
         </figure>
-        <figure class="card Code">
+        <!-- <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Earthy</figcaption>
-        </figure>
+        </figure> -->
         <figure class="card Code">
           <img class="card__image" loading="lazy" src="x" height="250px" alt="">
           <figcaption class="card__caption">Parshade script</figcaption>
         </figure>
-        <figure class="card Architecture">
+        <!-- <figure class="card Architecture">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Extreme</figcaption>
-        </figure>
-        <figure class="card Graphic">
+        </figure> -->
+        <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Personal Branding</figcaption>
-        </figure>
+        </figure> -->
         <figure class="card Architecture">
-          <a href=""> <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt=""> </a>
+          <img class="card__image" loading="lazy" src="images\projecten\Structural\6.jpg" height="250px" alt="">
           <figcaption class="card__caption">Structural Design - Glass</figcaption>
         </figure>
-        <figure class="card Graphic">
+        <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\Untitled.png" height="250px" alt="">
           <figcaption class="card__caption">[Still secret] APP UI & Artwork</figcaption>
-        </figure>
+        </figure> -->
       </div>
       <br></br> <br></br> <br></br> <br></br> <br></br> <br></br> <br></br>
       <br></br> <br></br>
