--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
         <script src="navbar.js"></script>
 
         
-        <div class="abouttextbox overflowcontainer">
+        <div class="abouttextbox">
             <img src="images\aboutme\cvpiccrop.png">
                 <h2 class="title">About Me</h2>
                 <p class="description">
