--- a/education.html
+++ b/education.html
@@ -39,7 +39,7 @@
 
     <!-- <div id= "container"> -->
         <br></br>
-<div class="overflowcontainer">
+<div class="overflowcontainer_nonhome">
     <div class="text"> 
         <h1> School</h1>
         </div>
@@ -96,6 +96,7 @@
             <h2>Koninklijke PBNA</h2>
             <p>VOL-VCA · (2018 - 2028)
     </div> 
+
     <br></br>    <br></br>    <br></br>    <br></br>    <br></br>    <br></br>    <br></br>
      
 
