--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,7 @@
       <h1>Skills</h1>
     </div>
 
-    <div class="overflowcontainer">
+    <div class="overflowcontainer_nonhome">
 
       <meta name="viewport" content="width=device-width">
       <input type="radio" name="filter" id="all" checked><label for="all">All</label>
@@ -68,6 +68,10 @@
         <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\Turkish.png" height="150px" alt="">
           <figcaption class="card__caption">Turkish - Native</figcaption>
+        </figure>
+        <figure class="card Language">
+          <img class="card__image" loading="lazy" src="images\skills\x.png" height="150px" alt="">
+          <figcaption class="card__caption">German - B1</figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Revit.png" height="150px" alt="">
