--- a/experience.html
+++ b/experience.html
@@ -39,7 +39,7 @@
         <script src="navbar.js"></script>
 
 <br></br>
-<div class="overflowcontainer">
+<div class="overflowcontainer_nonhome">
     <div class="text"> 
         <h1> Work & Internship</h1>
         </div>
@@ -80,7 +80,9 @@
     <img class="textbox_image_logos" src="https://media-exp1.licdn.com/dms/image/C560BAQEeGh4rcCCKIQ/company-logo_200_200/0/1578569010719?e=1654128000&v=beta&t=8FXJ3rbxpEUW6OPdscLextxNwMsU1uC3Yr8MdLxx9NA">
     <div class="textbox_text">
         <h2>TU Delft Faculty of Architecture and the Built Environment</h2>
-        <p>Student mentor
+        <p>Student Council member 2022/2023
+            <br></br>
+            Student mentor
             Aug 2021 - Feb 2022 · 7 mos
             </p> 
     </div>
