--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
       <h1> Projects</h1>
     </div>
 
-    <div class="overflowcontainer">
+    <div class="overflowcontainer_nonhome">
 
       <meta name="viewport" content="width=device-width">
       <input type="radio" name="filter" id="all" checked><label for="all">All</label>
@@ -57,16 +57,24 @@
       <input type="radio" name="filter" id="Product"><label for="Product">Product</label>
       <!-- <input type="radio" name="filter" id="Graphic"><label for="Graphic">Design</label> -->
       <div class="gallery">
+        <figure class="card Architecture">
+          <a href="projects_stuctural.html"> <img class="card__image" loading="lazy" src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
+          <figcaption class="card__caption">Structural Design - Glass</figcaption>
+        </figure>
+        <figure class="card Architecture">
+          <a href="https://www.delftsolardecathlon.com/"> <img class="card__image" loading="lazy" src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
+          <figcaption class="card__caption">SUM</figcaption>
+        </figure>
         <figure class="card Code">
           <a href="https://edaakaltun.github.io/project_apidae/"> <img class="card__image" loading="lazy" src="images\projecten\apidae\3.4_lattice_gym.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Project Apidae</figcaption>
         </figure>
         <figure class="card Code">
-          <img class="card__image" loading="lazy" src="images\indexmap\126371014.png" height="250px" alt="">
+          <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\bacground copy.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
         <figure class="card Architecture">
-          <img class="card__image" loading="lazy" src="images\projecten\Zero\situation2.png" height="250px" alt="">
+          <a href="projects_zero.html"> <img class="card__image" loading="lazy" src="images\projecten\Zero\situation2.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">ZERO Energy</figcaption>
         </figure>
         <figure class="card Product">
@@ -74,33 +82,25 @@
           <figcaption class="card__caption">BUCKY LAB</figcaption>
         </figure>
         <figure class="card Architecture">
-          <a href="https://www.delftsolardecathlon.com/"> <img class="card__image" loading="lazy" src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
-          <figcaption class="card__caption">SUM</figcaption>
-        </figure>
-        <figure class="card Architecture">
           <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png" height="250px" alt="">
           <figcaption class="card__caption">ON6</figcaption>
         </figure>
-        <!-- <figure class="card Code">
+        <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Earthy</figcaption>
-        </figure> -->
+        </figure>
         <figure class="card Code">
-          <img class="card__image" loading="lazy" src="x" height="250px" alt="">
+          <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Parshade script</figcaption>
         </figure>
-        <!-- <figure class="card Architecture">
+        <figure class="card Architecture">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Extreme</figcaption>
-        </figure> -->
+        </figure>
         <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Personal Branding</figcaption>
         </figure> -->
-        <figure class="card Architecture">
-          <img class="card__image" loading="lazy" src="images\projecten\Structural\6.jpg" height="250px" alt="">
-          <figcaption class="card__caption">Structural Design - Glass</figcaption>
-        </figure>
         <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\Untitled.png" height="250px" alt="">
           <figcaption class="card__caption">[Still secret] APP UI & Artwork</figcaption>
