--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <script src="darkmodemap.js"></script>
     </div>
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
             $(window).resize(function () {
