modified:   skills.html

--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
           <figcaption class="card__caption">Project Apidae</figcaption>
         </figure>
         <figure class="card Code">
-          <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\bacground copy.png" height="250px" alt=""> </a>
+          <a href="index.html"> <img class="card__image" loading="lazy" src="images\indexmap\background copy.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
         <figure class="card Architecture">
@@ -85,7 +85,7 @@
           <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png" height="250px" alt="">
           <figcaption class="card__caption">ON6</figcaption>
         </figure>
-        <figure class="card Code">
+        <!-- <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Earthy</figcaption>
         </figure>
@@ -96,7 +96,8 @@
         <figure class="card Architecture">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Extreme</figcaption>
-        </figure>
+        </figure> -->
+
         <!-- <figure class="card Graphic">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Personal Branding</figcaption>
