--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,7 @@
       <h1>Skills</h1>
     </div>
 
-    <div class="overflowcontainer">
+    <div class="overflowcontainer_nonhome">
 
       <meta name="viewport" content="width=device-width">
       <input type="radio" name="filter" id="all" checked><label for="all">All</label>
