--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <script src="darkmodemap.js"></script>
     </div>
-<!--     
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
@@ -109,7 +109,7 @@
                 });
             })
         })
-    </script> -->
+    </script>
 
 
 </body>
