--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <script src="navbar.js"></script>
-        <div class="overflowwrapper">
+        <div class="overflowcontainer_nonhome">
             <div class="overflowcentered">
                 <div class="overflowcontainer_home"> <img id="zindex0" src="images\indexmap\background.png">
                     <a href="aboutme.html"> <img class="overflowcontainer_home_AboutMe shadowfilter"
@@ -94,7 +94,7 @@
         <script src="darkmodemap.js"></script>
     </div>
     
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
             $(window).resize(function () {
@@ -109,7 +109,7 @@
                 });
             })
         })
-    </script>
+    </script> -->
 
 
 </body>
