--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 
     <div class="nav-container">
         <nav class="navbar"> 
-            <img src="images/logo.png" href= "index.html" alt="logo image" id="navbar-logo">
+            <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </href>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
