--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="nav-container">
             <nav class="navbar">
-                <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </href>
+                <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </a>
                 <div class="menu-toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
