--- a/skills.html
+++ b/skills.html
@@ -49,6 +49,9 @@
     </div>
 
     <div class="overflowcontainer_nonhome">
+      <!-- <i class="fa-regular fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i> -->
 
       <meta name="viewport" content="width=device-width">
       <input type="radio" name="filter" id="all" checked><label for="all">All</label>
@@ -59,115 +62,248 @@
       <div class="gallery">
         <figure class="card Language">
          <img class="card__image" loading="lazy" src="images\skills\Dutch.png" height="150px" alt="">
-          <figcaption class="card__caption">Dutch - Native</figcaption>
+          <figcaption class="card__caption">Dutch - Native 
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\English.jpg" height="150px" alt="">
-          <figcaption class="card__caption">English - C2</figcaption>
+          <figcaption class="card__caption">English - C2   
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\Turkish.png" height="150px" alt="">
-          <figcaption class="card__caption">Turkish - Native</figcaption>
+          <figcaption class="card__caption">Turkish - Native
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Language">
           <img class="card__image" loading="lazy" src="images\skills\x.png" height="150px" alt="">
-          <figcaption class="card__caption">German - B1</figcaption>
+          <figcaption class="card__caption">German - B1
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Revit.png" height="150px" alt="">
-          <figcaption class="card__caption">Revit</figcaption>
+          <figcaption class="card__caption">Revit
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Sketchup.png" height="150px" alt="">
-          <figcaption class="card__caption">Sketchup</figcaption>
+          <figcaption class="card__caption">Sketchup
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\AutoCAD.png" height="150px" alt="">
-          <figcaption class="card__caption">AutoCAD</figcaption>
+          <figcaption class="card__caption">AutoCAD
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Solibri.png" height="150px" alt="">
-          <figcaption class="card__caption">Solibri</figcaption>
+          <figcaption class="card__caption">Solibri
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Uniec.png" height="150px" alt="">
-          <figcaption class="card__caption">UNIEC</figcaption>
+          <figcaption class="card__caption">UNIEC
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
+          
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Enorm.jpg" height="150px" alt="">
-          <figcaption class="card__caption">ENORM</figcaption>
+          <figcaption class="card__caption">ENORM
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Rhino.png" height="150px" alt="">
-          <figcaption class="card__caption">Rhino</figcaption>
+          <figcaption class="card__caption">Rhino
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Office.png" height="150px" alt="">
-          <figcaption class="card__caption">Microsoft Package</figcaption>
+          <figcaption class="card__caption">Microsoft Package
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Indesign.png" height="150px" alt="">
-          <figcaption class="card__caption">Adobe InDesign</figcaption>
+          <figcaption class="card__caption">InDesign
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Illustrator.png" height="150px" alt="">
-          <figcaption class="card__caption">Adobe Illustrator</figcaption>
+          <figcaption class="card__caption">Illustrator
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Photoshop.png" height="150px" alt="">
-          <figcaption class="card__caption">Adobe Photoshop</figcaption>
+          <figcaption class="card__caption">Adobe Photoshop
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\GIMP.png" height="150px" alt="">
-          <figcaption class="card__caption">GIMP</figcaption>
+          <figcaption class="card__caption">GIMP
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Edupack.jpg" height="150px" alt="">
-          <figcaption class="card__caption">CES Edupack</figcaption>
+          <figcaption class="card__caption">CES Edupack
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\DesignBuilder.jpg" height="150px" alt="">
-          <figcaption class="card__caption">Design Builder</figcaption>
+          <figcaption class="card__caption">Design Builder
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Lumion.jpg" height="150px" alt="">
-          <figcaption class="card__caption">Lumion</figcaption>
+          <figcaption class="card__caption">Lumion
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Enscape.png" height="150px" alt="">
-          <figcaption class="card__caption">Enscape</figcaption>
+          <figcaption class="card__caption">Enscape
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Tiled.png" height="150px" alt="">
-          <figcaption class="card__caption">Tiled</figcaption>
+          <figcaption class="card__caption">Tiled
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Python.png" height="150px" alt="">
-          <figcaption class="card__caption">Python</figcaption>
+          <figcaption class="card__caption">Python
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="" height="150px" alt="">
-          <figcaption class="card__caption">HTML & CSS</figcaption>
+          <figcaption class="card__caption">HTML & CSS
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Markdown.png" height="150px" alt="">
-          <figcaption class="card__caption">Markdown</figcaption>
+          <figcaption class="card__caption">Markdown
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Coding">
           <img class="card__image" loading="lazy" src="images\skills\Grasshopper.png" height="150px" alt="">
-          <figcaption class="card__caption">Grasshopper</figcaption>
+          <figcaption class="card__caption">Grasshopper
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Etc">
           <img class="card__image" loading="lazy" src="" height="150px" alt="">
-          <figcaption class="card__caption">Graphic Design</figcaption>
-        </figure>
-        <figure class="card Etc">
-          <img class="card__image" loading="lazy" src="" height="150px" alt="">
-          <figcaption class="card__caption">BIM</figcaption>
-        </figure>
-        <figure class="card Etc">
-          <img class="card__image" loading="lazy" src="" height="150px" alt="">
-          <figcaption class="card__caption">Systems Engineering</figcaption>
+          <figcaption class="card__caption">Graphic Design
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
         <figure class="card Etc">
           <img class="card__image" loading="lazy" src="images\skills\BREEAM.png" height="150px" alt="">
@@ -179,7 +315,13 @@
         </figure>
         <figure class="card Etc">
           <img class="card__image" loading="lazy" src="" height="150px" alt="">
-          <figcaption class="card__caption">BENG</figcaption>
+          <figcaption class="card__caption">BENG
+          <br></br>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+          <i class="fa-solid fa-star fa-xs"></i>
+        </figcaption>
         </figure>
 
       </div>
