--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     <br></br> <br></br>
     <form>
       <div>
-      <img src="x" alt="icon">
+        <i class="fa-solid fa-envelope"></i>
        </div>
       <input type="text" placeholder="Name (required)" required>
       <input type="text" placeholder="Return address (required)" required>
